--- a/Resources/Prototypes/_Lua/sector_configs.yml
+++ b/Resources/Prototypes/_Lua/sector_configs.yml
@@ -30,7 +30,7 @@
   worldgenConfig: Default
   autoStart: true
   defaultGamePreset: NFPirates
-  requiredGamePresets: NFPirates
+  requiredGamePresets: [ NFPirates ]
   parallaxPool: [ OriginStation, NordFoll ]
   deadDropEnabled: false
   poiGroups:
@@ -47,7 +47,7 @@
   worldgenConfig: Default
   autoStart: true
   defaultGamePreset: LuaAdventure
-  requiredGamePresets: LuaAdventure
+  requiredGamePresets: [ LuaAdventure ]
   parallaxPool: [ OriginStation, NordFoll ]
   deadDropEnabled: false
   poiGroups:
@@ -76,7 +76,7 @@
   station: Cove
   autoStart: true
   defaultGamePreset: NFPirates
-  requiredGamePresets: NFPirates
+  requiredGamePresets: [ NFPirates ]
   parallaxPool: [ CoreStation, Tortuga ]
   deadDropEnabled: true
   deadDropCount: 2
@@ -89,7 +89,7 @@
   station: CoveLua
   autoStart: true
   defaultGamePreset: LuaAdventure
-  requiredGamePresets: LuaAdventure
+  requiredGamePresets: [ LuaAdventure ]
   parallaxPool: [ CoreStation, Tortuga ]
   deadDropEnabled: true
   deadDropCount: 2
@@ -102,7 +102,7 @@
   station: MercMap
   autoStart: true
   defaultGamePreset: NFPirates
-  requiredGamePresets: NFPirates
+  requiredGamePresets: [ NFPirates ]
   parallaxPool: [ MercenaryPlanet, Sky ]
   deadDropEnabled: true
   deadDropCount: 1
