Пак незначительных изменений (#382)
* Hristov + flintlock pistol

* Minor Changes

* del-old-mag-0

--- a/Resources/Prototypes/_ADT/Entities/Objects/Weapons/Guns/Rifels/xc67.yml
+++ b/Resources/Prototypes/_ADT/Entities/Objects/Weapons/Guns/Rifels/xc67.yml
@@ -36,6 +36,7 @@
         whitelist:
           tags:
             - ADTExtMagazineRifle
+            - NFMagazineRifle20
       gun_chamber:
         name: Chamber
         startingItem: NFCartridgeRifle20
