--- a/Resources/Prototypes/_Lua/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/_Lua/Entities/Structures/Machines/lathe.yml
@@ -54,6 +54,7 @@
     runningState: base_machine_processing
     dynamicPacks:
       - ArmoryLatheDynamicPack
+  - type: OreSiloClient
 
 - type: entity
   id: MedipenTechfab
