--- a/Resources/Prototypes/_NF/Recipes/Lathes/Packs/engineering.yml
+++ b/Resources/Prototypes/_NF/Recipes/Lathes/Packs/engineering.yml
@@ -96,3 +96,10 @@
   - SuperMatterBinStockPart
   - PicoManipulatorStockPart
   - NFWeaponParticleDecelerator
+
+- type: latheRecipePack
+  id: NFSolarPack
+  recipes:
+  - SolarControlComputerCircuitboard
+  - SolarTrackerElectronics
+  - SolarAssemblyFlatpack
