--- a/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
@@ -218,6 +218,7 @@
     - NFChemistryBasicStatic # Frontier
     - NFSurgeryBasicStatic # Frontier
     dynamicPacks:
+    - NFSolarPack  
     - AdvancedTools
     - ScienceEquipment
     - ScienceExplosives
